@@ -2,6 +2,8 @@ package com.bookbook.booklink.library_service.service;
 
 import com.bookbook.booklink.auth_service.model.Member;
 import com.bookbook.booklink.book_service.model.LibraryBook;
+import com.bookbook.booklink.book_service.service.LibraryBookService;
+import com.bookbook.booklink.common.dto.PageResponse;
 import com.bookbook.booklink.common.event.LockEvent;
 import com.bookbook.booklink.common.exception.CustomException;
 import com.bookbook.booklink.common.exception.ErrorCode;
@@ -10,14 +12,20 @@ import com.bookbook.booklink.library_service.model.Library;
 import com.bookbook.booklink.library_service.model.dto.request.LibraryRegDto;
 import com.bookbook.booklink.library_service.model.dto.request.LibraryUpdateDto;
 import com.bookbook.booklink.library_service.model.dto.response.LibraryDetailDto;
+import com.bookbook.booklink.library_service.model.dto.response.LibraryDistanceProjection;
 import com.bookbook.booklink.library_service.repository.LibraryRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Library 관련 비즈니스 로직 처리 서비스
@@ -32,6 +40,7 @@ public class LibraryService {
 
     private final LibraryRepository libraryRepository;
     private final IdempotencyService idempotencyService;
+    private final LibraryBookService libraryBookService;
 
     /**
      * 새로운 Library 등록
@@ -140,19 +149,52 @@ public class LibraryService {
         return LibraryDetailDto.fromEntity(library, top5List);
     }
 
+    @Transactional(readOnly = true)
+    public LibraryDetailDto getMyLibrary(Member member) {
+        Library library = findByUserId(member.getId());
+
+        return LibraryDetailDto.fromEntity(library);
+    }
+
     /**
-     * 내 주변 3km 이내의 도서관 조회 (리스트 반환)
+     * 현재 위치를 기준으로 가장 가까운 순으로 도서관을 조회하고 페이지네이션 적용.
      *
-     * @param lat 현재위치(위도)
-     * @param lng 현재위치(경도)
-     * @return 현재위치로부터 3km 이내의 도서관 정보 리스트
+     * @param lat      현재위치(위도)
+     * @param lng      현재위치(경도)
+     * @param name     검색어
+     * @param pageable 페이지네이션 정보 (페이지 번호, 크기)
+     * @return 페이지네이션된 도서관 정보 DTO Page
      */
     @Transactional(readOnly = true)
-    public List<LibraryDetailDto> getLibraries(Double lat, Double lng, String name) {
+    public PageResponse<LibraryDetailDto> getLibraries(Double lat, Double lng, String name, Pageable pageable) {
 
-        List<Library> libraries = libraryRepository.findNearbyLibraries(lat, lng, name);
+        Page<LibraryDistanceProjection> libraryPage = libraryRepository.findLibrariesOrderByDistance(lat, lng, name, pageable);
+        List<UUID> libraryIds = libraryPage.getContent().stream()
+                .map(p -> p.getLibrary().getId())
+                .toList();
 
-        return libraries.stream().map(LibraryDetailDto::fromEntity).toList();
+        List<LibraryBook> allLibraryBooks = libraryBookService.findTop5BooksList(libraryIds);
+
+        Map<UUID, List<LibraryBook>> topBooksMap = allLibraryBooks.stream()
+                .collect(Collectors.groupingBy(
+                        lb -> lb.getLibrary().getId(),
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                list -> list.stream()
+                                        .limit(5)
+                                        .collect(Collectors.toList())
+                        )
+                ));
+        Page<LibraryDetailDto> dtoPage = libraryPage.map(projection -> {
+            Library library = projection.getLibrary();
+            Double distance = projection.getDistance();
+
+            List<LibraryBook> top5List = topBooksMap.getOrDefault(library.getId(), Collections.emptyList());
+
+            return LibraryDetailDto.fromEntity(library, distance, top5List);
+        });
+
+        return PageResponse.from(dtoPage);
     }
 
     /**
